packages/errors/test/__snapshots__/CLOUD_CANNOT_PROCEED_IN_SERIAL.ansi
[31mWe encountered an unexpected error communicating with our servers.[39m
[31m[39m
[31m[95mStatusCodeError: 500 - "Internal Server Error"[39m[31m[39m
[31m[39m
[31mBecause you passed the [95m--record[39m[31m flag, this run cannot proceed since it requires a valid response from our servers.[39m
[31m[39m
[31mThe --group flag you passed was: [33mfoo[39m[31m[39m
[31mThe --ciBuildId flag you passed was: [33minvalid[39m[31m[39m